override emailing with resend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 API_DOMAIN=""
 CLIENT_DOMAIN=""
+
 SUPERTOKENS_DOMAIN=""
 SUPERTOKENS_API_KEY=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
+RESEND_API_KEY=""
